# supercollider

./: .gitmodules  .travis.yml  CMakeLists.txt  novacollider_updater.hs
HelpSource/Reference/: Server-Command-Reference.schelp
QtCollider/: CMakeLists.txt  Common.h  QObjectProxy.h  QcObjectFactory.h  QcWidgetFactory.h  QtDownload.h  factories.cpp  interface.cpp  metatype.cpp  metatype.hpp  type_codec.cpp  type_codec.hpp
QtCollider/primitives/: prim_QObject.cpp  prim_QPalette.cpp  prim_QPalette.hpp  prim_QWidget.cpp
QtCollider/widgets/: BasicWidgets.cpp  BasicWidgets.h  QcButton.cpp  QcButton.h  QcCanvas.cpp  QcCanvas.h  QcCheckBox.h  QcGraph.cpp  QcGraph.h  QcKnob.cpp  QcKnob.hpp  QcLevelIndicator.cpp  QcLevelIndicator.h  QcListWidget.h  QcMultiSlider.cpp  QcMultiSlider.h  QcNumberBox.cpp  QcNumberBox.h  QcPenPrinter.h  QcPopUpMenu.cpp  QcPopUpMenu.h  QcQmlView.cpp  QcQmlView.h  QcRangeSlider.cpp  QcRangeSlider.h  QcScope.cpp  QcScope.h  QcScopeShm.cpp  QcScopeShm.h  QcScrollArea.cpp  QcScrollArea.h  QcSlider.cpp  QcSlider.h  QcSlider2D.cpp  QcSlider2D.h  QcTextEdit.cpp  QcTextEdit.h  QcTextField.h  QcTreeWidget.h  QcWebView.cpp  (+1 more)
QtCollider/widgets/soundfileview/: view.cpp  view.hpp
SCClassLibrary/Common/Audio/: BasicOpsUGen.sc  FSinOsc.sc  Filter.sc  Line.sc  Osc.sc  UGen.sc
SCClassLibrary/Common/Collections/: Event.sc  Scale.sc  SequenceableCollection.sc
SCClassLibrary/Common/Control/: Buffer.sc  Node.sc
SCClassLibrary/Common/Core/: AbstractFunction.sc  Function.sc  Object.sc  Symbol.sc
SCClassLibrary/Common/GUI/Base/: BasicViews.sc
SCClassLibrary/Common/GUI/PlusGUI/Control/: FreqScope.sc
SCClassLibrary/Common/Math/: Integer.sc  SimpleNumber.sc
SCClassLibrary/deprecated/3.7/: deprecated-3.7.sc
common/: SC_fftlib.cpp
editors/sc-ide/: CMakeLists.txt
editors/sc-ide/core/: main.cpp  main.hpp  sc_process.cpp  sc_process.hpp  sc_server.cpp  sc_server.hpp
editors/sc-ide/core/settings/: theme.cpp
editors/sc-ide/widgets/: audio_status_box.cpp  audio_status_box.hpp  help_browser.hpp  main_window.cpp  main_window.hpp  multi_editor.cpp  popup_text_input.hpp
editors/sc-ide/widgets/code_editor/: autocompleter.cpp  editor.cpp  overlay.cpp  sc_editor.cpp  sc_editor.hpp
editors/sc-ide/widgets/style/: style.cpp
editors/sc-ide/widgets/util/: docklet.cpp  docklet.hpp  status_box.cpp  status_box.hpp
external_libraries/: CMakeLists.txt
external_libraries/boost_sync/include/boost/sync/: semaphore.hpp
external_libraries/portaudio/: CMakeLists.txt
external_libraries/zita-resampler-1.2.0/: README
external_libraries/zita-resampler-1.2.0/libs/: Makefile  vresampler.cc
include/common/: function_attributes.h
include/plugin_interface/: SC_PlugIn.hpp  SC_SndBuf.h  muladd_helpers.hpp
lang/: CMakeLists.txt
lang/LangPrimSource/: OSCData.cpp  PyrFilePrim.cpp  PyrPrimitive.cpp  PyrSerialPrim.cpp  PyrSignalPrim.cpp
lang/LangSource/: DumpParseNode.cpp  GC.cpp  GC.h  PyrInterpreter3.cpp  PyrLexer.cpp  PyrMessage.cpp  PyrObject.cpp  PyrObject.h  PyrSlot.h  dumpByteCodes.cpp
platform/mac/: CMakeLists.txt
server/: CMakeLists.txt
server/plugins/: CMakeLists.txt  Convolution.cpp  DiskIO_UGens.cpp  FFT_UGens.cpp  FilterUGens.cpp  LFUGens.cpp  OscUGens.cpp  UIUGens.cpp
server/scsynth/: CMakeLists.txt  SC_SequencedCommand.cpp
server/supernova/: CMakeLists.txt
server/supernova/audio_backend/: audio_backend_common.hpp  jack_backend.hpp  portaudio_backend.hpp  sndfile_backend.hpp  upsampled_audio_backend.hpp
server/supernova/dsp_thread_queue/: dsp_thread.hpp  dsp_thread_queue.hpp
server/supernova/sc/: sc_osc_handler.cpp  sc_osc_handler.hpp  sc_plugin_interface.cpp  sc_plugin_interface.hpp  sc_synth.cpp  sc_synth.hpp  sc_synth_definition.hpp  sc_synthdef.cpp  sc_synthdef.hpp  sc_ugen_factory.cpp  sc_ugen_factory.hpp
server/supernova/server/: dependency_graph_generator.hpp  dsp_thread_queue_node.hpp  group.hpp  main.cpp  node_graph.cpp  node_graph.hpp  node_types.hpp  server.cpp  server.hpp  server_args.cpp  server_args.hpp  server_scheduler.hpp  synth.hpp  synth_definition.hpp  synth_factory.hpp
server/supernova/utilities/: asynchronous_log.hpp  callback_interpreter.hpp  malloc_aligned.hpp  osc_server.hpp  static_pool.hpp  utils.hpp
testsuite/supernova/: CMakeLists.txt  server_node_graph_satellite_test.cpp  server_node_graph_test.cpp  server_test.cpp  test_synth.hpp
